syntax = "proto3";

package bridge;
option go_package = "github.com/koinos-bridge/koinos-bridge-validator/bridge_pb";

message metadata {
    uint64 last_ethereum_block_parsed = 1;
    uint64 last_koinos_block_parsed = 2;
}

enum transaction_type {
    koinos = 0;
    ethereum = 1;
}

enum transaction_status{
    gathering_signatures = 0;
    signed = 1;
    completed = 2;
}

message transaction {
    transaction_type type = 1;
    string id = 2;
    string op_id = 3;
    uint64 block_number = 4;
    uint64 block_time = 5;
    uint64 expiration = 6;
    string from = 7;
    string eth_token = 8;
    string koinos_token = 9;
    string amount = 10;
    string payment = 11;
    string relayer = 12;
    string recipient = 13;
    string hash = 14;
    string metadata = 15;
    repeated string validators = 16;
    repeated string signatures = 17;
    transaction_status status = 18;
    string completion_transaction_id = 19;
    string to_chain = 20;
}

enum action_id {
    reserved_action = 0;
    add_validator = 1;
    remove_validator = 2;
    add_supported_token = 3;
    remove_supported_token = 4;
    add_supported_wrapped_token = 5;
    remove_supported_wrapped_token = 6;
    set_pause = 7;
    complete_transfer = 8;
}

message complete_transfer_hash {
    action_id action = 1;
    bytes transaction_id = 2;
    bytes token = 3;
    bytes recipient = 4;
    bytes relayer = 5;
    uint64 amount = 6;
    uint64 payment = 7;
    string metadata = 8;
    bytes contract_id = 9;
    uint64 expiration = 10;
    uint32 chain = 11;
}

message submitted_signature {
    transaction transaction = 1;
    string signature = 2;
    int64 expiration = 3;
}

message tokens_locked_event {
    bytes from = 1;
    bytes token = 2;
    string amount = 3;
    string payment = 4;
    string relayer = 5;
    string recipient = 6;
    string metadata = 7;
    uint32 chain_id = 8;
}
  
message transfer_completed_event {
    bytes tx_id = 1;
}
  
message request_new_signatures_event {
    string transaction_id = 1;
    string operation_id = 2;
}